--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>404 Page not found | A Hugo test</title>
+<title>404 Page not found | Adam CL</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
@@ -80,7 +80,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://adamliliemark.github.io" accesskey="h" title="A Hugo test (Alt + H)">A Hugo test</a>
+            <a href="http://adamliliemark.github.io" accesskey="h" title="Adam CL (Alt + H)">Adam CL</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -106,18 +106,8 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="http://adamliliemark.github.io/categories/" title="categories">
-                    <span>categories</span>
-                </a>
-            </li>
-            <li>
-                <a href="http://adamliliemark.github.io/tags/" title="tags">
-                    <span>tags</span>
-                </a>
-            </li>
-            <li>
-                <a href="https://adamliliemark.github.io" title="example.org">
-                    <span>example.org</span>
+                <a href="http://adamliliemark.github.io/about/" title="about">
+                    <span>about</span>
                 </a>
             </li>
         </ul>
@@ -128,7 +118,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2022 <a href="http://adamliliemark.github.io">A Hugo test</a></span>
+    <span>&copy; 2022 <a href="http://adamliliemark.github.io">Adam CL</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
