--- a/search/index.html
+++ b/search/index.html
@@ -11,7 +11,7 @@
 <meta name="author" content="">
 <link rel="canonical" href="http://adamliliemark.github.io/search/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.d7fb4cbf980fe688a21621b06a795933c4e6bb2d4070ec940667af1715d84af2.css" integrity="sha256-1/tMv5gP5oiiFiGwanlZM8Tmuy1AcOyUBmevFxXYSvI=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
-<script defer crossorigin="anonymous" src="/assets/js/search.770db10e88a066ef8b1ca9fd592e4a35307bfb562d4bc0e5e72d815a4816ce20.js" integrity="sha256-dw2xDoigZu&#43;LHKn9WS5KNTB7&#43;1YtS8Dl5y2BWkgWziA="></script>
+<script defer crossorigin="anonymous" src="/assets/js/search.aecf99c63ea2915e72c55541b90b675bdef8bb91aec3889dc8e4601a6a414d8f.js" integrity="sha256-rs&#43;Zxj6ikV5yxVVBuQtnW974u5Guw4idyORgGmpBTY8="></script>
 <link rel="icon" href="http://adamliliemark.github.io/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="http://adamliliemark.github.io/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="http://adamliliemark.github.io/favicon-32x32.png">
@@ -180,7 +180,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2022 <a href="http://adamliliemark.github.io">Adam CL</a></span>
+    <span>&copy; 2023 <a href="http://adamliliemark.github.io">Adam CL</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
