deploy: 205a8c84d81d62de2f9a9fcc857840a9c64079c5

--- a/about/index.html
+++ b/about/index.html
@@ -29,6 +29,7 @@
             <a href="/">Home</a>
             <a href="/about/">About</a>
             <a href="/archive/">Archive</a>
+            <a href="/keywords/">Tags</a>
             <a href="/reads/">Reads</a>
             <a type="application/rss+xml" href="/index.xml">RSS</a>
           </div>
@@ -36,11 +37,9 @@
         <main class="flex justify-center">
           <div class="w-full md:w-1/2">
             
-  <div class="text-3xl">
-    <a href="/about/">
-      <span>Adam aka Ackurat.</span>
-    </a>
-  </div>
+  <span class="text-3xl my-4">
+    <a href="/about/">Adam aka Ackurat.</a>
+  </span>
   <article class="text-xl">
     <img style="width: 30%; height: auto; float: right; border-radius: 50%;" src="/images/adam.jpg" alt="Photo of me" width="300" height="300">
 <p>
