--- a/404.html
+++ b/404.html
@@ -29,6 +29,7 @@
             <a href="/">Home</a>
             <a href="/about/">About</a>
             <a href="/archive/">Archive</a>
+            <a href="/keywords/">Tags</a>
             <a href="/reads/">Reads</a>
             <a type="application/rss+xml" href="/index.xml">RSS</a>
           </div>
@@ -36,11 +37,9 @@
         <main class="flex justify-center">
           <div class="w-full md:w-1/2">
             
-  <div class="text-3xl">
-    <a href="/404/">
-      <span>404 - Not Found</span>
-    </a>
-  </div>
+  <span class="text-3xl my-4">
+    <a href="/404/">404 - Not Found</a>
+  </span>
   <article class="text-xl">
     <p>
 <a href="/">Go to homepage</a></p>
