--- a/keywords/index.html
+++ b/keywords/index.html
@@ -2,24 +2,24 @@
   <html lang="en">
     <head>
       <meta charset="utf-8">
-      <title>Reads</title>
-      <meta name="description" content="A list of articles I read and recommend.">
+      <title>ackurat.github.io</title>
+      <meta name="description" content="Ackurat&#39;s test thing">
       <meta name="author" content="Adam CL">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link href="/index.xml" rel="alternate" type="application/rss+xml" title="ackurat.github.io">
       <meta name="ROBOTS" content="INDEX, FOLLOW">
-      <meta property="og:title" content="Reads">
-      <meta property="og:description" content="A list of articles I read and recommend.">
+      <meta property="og:title" content="ackurat.github.io">
+      <meta property="og:description" content="Ackurat&#39;s test thing">
       <meta property="og:type" content="website">
-      <meta property="og:url" content="https://ackurat.github.io/reads/">
+      <meta property="og:url" content="https://ackurat.github.io/">
       <meta name="twitter:card" content="summary">
-      <meta name="twitter:title" content="Reads">
-      <meta name="twitter:description" content="A list of articles I read and recommend.">
-      <meta itemprop="name" content="Reads">
-      <meta itemprop="description" content="A list of articles I read and recommend.">
+      <meta name="twitter:title" content="ackurat.github.io">
+      <meta name="twitter:description" content="Ackurat&#39;s test thing">
+      <meta itemprop="name" content="ackurat.github.io">
+      <meta itemprop="description" content="Ackurat&#39;s test thing">
       
-      <link rel="canonical" href="https://ackurat.github.io/reads/">
+      <link rel="canonical" href="https://ackurat.github.io/">
       <link rel="stylesheet" href="/assets/app.css">
     </head>
     <body>
@@ -37,16 +37,10 @@
         <main class="flex justify-center">
           <div class="w-full md:w-1/2">
             
-  <span class="text-3xl my-4">Reads</span>
-  <section class="text-xl mt-4">
-      <ul>
-        <li>
-          <a href="/reads/test/">
-            Placeholder
-          </a>
-        </li>
-       </ul>
-  </section>
+  <span class="text-3xl my-4">Tags</span>
+  <div class="mt-4">
+    <a class="text-base mr-2" href="advent-of-code">advent-of-code</a><a class="text-base mr-2" href="database">database</a><a class="text-base mr-2" href="elixir">elixir</a><a class="text-base mr-2" href="gleam">gleam</a><a class="text-base mr-2" href="postgres">postgres</a><a class="text-base mr-2" href="zig">zig</a><a class="text-base mr-2" href="zine">zine</a>
+  </div>
 
           </div>
         </main>
