deploy: 941259cea31c079947cbd9a497d91a5771562d4c

--- a/keywords/index.html
+++ b/keywords/index.html
@@ -39,7 +39,7 @@
             
   <span class="text-3xl my-4">Tags</span>
   <div class="mt-4">
-    <a class="text-base mr-2" href="advent-of-code">advent-of-code</a><a class="text-base mr-2" href="database">database</a><a class="text-base mr-2" href="elixir">elixir</a><a class="text-base mr-2" href="gleam">gleam</a><a class="text-base mr-2" href="postgres">postgres</a><a class="text-base mr-2" href="zig">zig</a><a class="text-base mr-2" href="zine">zine</a>
+    <a class="text-base mr-2" href="advent-of-code">advent-of-code</a><a class="text-base mr-2" href="gleam">gleam</a><a class="text-base mr-2" href="zig">zig</a><a class="text-base mr-2" href="zine">zine</a>
   </div>
 
           </div>
