deploy: 80fa5d07c5c8c18ab59e84b58f97baa1b4cd713b

--- a/keywords/elixir/index.html
+++ b/keywords/elixir/index.html
@@ -37,9 +37,14 @@
         <main class="flex justify-center">
           <div class="w-full md:w-1/2">
             
-  <span class="text-3xl my-4">Tags</span>
-  <div class="mt-4">
-    <a class="text-base mr-2" href="advent-of-code">advent-of-code</a><a class="text-base mr-2" href="elixir">elixir</a><a class="text-base mr-2" href="gleam">gleam</a><a class="text-base mr-2" href="zig">zig</a><a class="text-base mr-2" href="zine">zine</a>
+  <span class="text-3xl my-4">elixir</span>
+  <div>
+    <a href="/once-again-rewriting-the-site/">
+      <div class="mt-4">
+        <span class="text-base">Feb 8, 2025</span>
+        <div class="text-xl font-bold">Once again rewriting the site</div>
+      </div>
+    </a>
   </div>
 
           </div>
