--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
             
   <span class="text-3xl my-4">Recent posts</span>
   <div>
-    <a href="/exploring-gleam-through-advent-of-code/">
+    <a href="/once-again-rewriting-the-site/">
+      <div class="mt-4">
+        <div class="text-base">Feb 8, 2025</div>
+        <h2 class="text-xl font-bold">Once again rewriting the site</h2>
+        <div class="text-lg">I&#39;m rewriting the site in Elixir, with NimblePublisher and LiveView templates as a base.</div>
+      </div>
+    </a><a href="/exploring-gleam-through-advent-of-code/">
       <div class="mt-4">
         <div class="text-base">Nov 11, 2024</div>
         <h2 class="text-xl font-bold">Exploring gleam through advent of code</h2>
