deploy: 6c86c382e592980ef63fbf2d3c4be5def5d95a9e

--- a/404.html
+++ b/404.html
@@ -41,8 +41,8 @@
     <a href="/404/">404 - Not Found</a>
   </span>
   <article class="text-xl">
-    <p>
-<a href="/">Go to homepage</a></p>
+    
+<p><a href="/">Go to homepage</a></p>
 
   </article>
 
