--- a/about/index.html
+++ b/about/index.html
@@ -41,9 +41,9 @@
     <a href="/about/">Adam aka Ackurat.</a>
   </span>
   <article class="text-xl">
-    <img style="width: 30%; height: auto; float: right; border-radius: 50%;" src="/images/adam.jpg" alt="Photo of me" width="300" height="300">
-<p>
-I’m a software engineer based in Sweden. I specialize in backend development and databases, particularly NodeJS, BEAM and PostgreSQL. You can find me on <a href="https://www.github.com/ackurat">GitHub</a> or <a href="https://www.linkedin.com/in/adamliliemark">LinkedIn</a>.</p>
+    
+<p>&lt;img style=”width: 30%; height: auto; float: right; border-radius: 50%;” src=”/images/adam.jpg” alt=”Photo of me” width=”300” height=”300”&gt;</p>
+<p>I’m a software engineer based in Sweden. I specialize in backend development and databases, particularly NodeJS, BEAM and PostgreSQL. You can find me on <a href="https://www.github.com/ackurat">GitHub</a> or <a href="https://www.linkedin.com/in/adamliliemark">LinkedIn</a>.</p>
 
   </article>
 
