--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
             
   <span class="text-3xl my-4">Recent posts</span>
   <div>
-    <a href="/once-again-rewriting-the-site/">
+    <a href="/using-djot-for-content/">
+      <div class="mt-4">
+        <div class="text-base">Feb 18, 2025</div>
+        <h2 class="text-xl font-bold">Using Djot for Content</h2>
+        <div class="text-lg">My site now has Djot support, which will make it easier to implement some microfeatures such as inline code highlighting and footnotes.</div>
+      </div>
+    </a><a href="/once-again-rewriting-the-site/">
       <div class="mt-4">
         <div class="text-base">Feb 8, 2025</div>
         <h2 class="text-xl font-bold">Once again rewriting the site</h2>
