--- a/keywords/djot/index.html
+++ b/keywords/djot/index.html
@@ -37,17 +37,12 @@
         <main class="flex justify-center">
           <div class="w-full md:w-1/2">
             
-  <span class="text-3xl my-4">elixir</span>
+  <span class="text-3xl my-4">djot</span>
   <div>
     <a href="/using-djot-for-content/">
       <div class="mt-4">
         <span class="text-base">Feb 18, 2025</span>
         <div class="text-xl font-bold">Using Djot for Content</div>
-      </div>
-    </a><a href="/once-again-rewriting-the-site/">
-      <div class="mt-4">
-        <span class="text-base">Feb 8, 2025</span>
-        <div class="text-xl font-bold">Once again rewriting the site</div>
       </div>
     </a>
   </div>
