deploy: 0cfac7381fe95c51570760135a1c32f953cef4b4

--- a/about/index.html
+++ b/about/index.html
@@ -42,7 +42,7 @@
   </span>
   <article class="text-xl">
     
-<p>&lt;img style=”width: 30%; height: auto; float: right; border-radius: 50%;” src=”/images/adam.jpg” alt=”Photo of me” width=”300” height=”300”&gt;</p>
+<p><img class="size-60 float-right rounded-full" alt="Photo of me" src="/images/adam.jpg"></p>
 <p>I’m a software engineer based in Sweden. I specialize in backend development and databases, particularly NodeJS, BEAM and PostgreSQL. You can find me on <a href="https://www.github.com/ackurat">GitHub</a> or <a href="https://www.linkedin.com/in/adamliliemark">LinkedIn</a>.</p>
 
   </article>
